--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,12 @@
         "zendframework/zend-expressive-fastroute": "^1.0",
         "zendframework/zend-servicemanager": "^2.7.3 || ^3.0",
         "ocramius/proxy-manager": "^1.0",
-        "zendframework/zend-expressive-twigrenderer": "^1.0"
+        "zendframework/zend-expressive-twigrenderer": "^1.0",
+        "zendframework/zend-form": "^2.6",
+        "zendframework/zend-eventmanager": "~2.5",
+        "zendframework/zend-session": "~2.5",
+        "zendframework/zend-authentication": "^2.5"
+
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
@@ -33,7 +38,9 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/App/"
+            "App\\": "src/App/",
+            "Auth\\": "src/Auth/",
+            "Util\\": "src/Util/"
         }
     },
     "autoload-dev": {
