--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "victorynox/Tesrbigdata",
+    "name": "victorynox/testrbigdata",
     "type": "project",
     "homepage": "https://github.com/victorynox/TestR",
     "license": "BSD-3-CLAUSE",
