--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,9 @@
         "zendframework/zend-form": "^2.6",
         "zendframework/zend-eventmanager": "~2.5",
         "zendframework/zend-session": "~2.5",
-        "zendframework/zend-authentication": "^2.5"
-
+        "zendframework/zend-authentication": "^2.5",
+        "zendframework/zend-inputfilter": "^2.6",
+        "zendframework/zend-hydrator": "^1.1 || ^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
