--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "zendframework/zend-expressive-helpers": "^2.0",
         "zendframework/zend-stdlib": "~2.7",
         "zendframework/zend-expressive-fastroute": "^1.0",
-        "zendframework/zend-servicemanager": "^2.7.3 || ^3.0",
+        "zendframework/zend-servicemanager": "^2.7",
         "ocramius/proxy-manager": "^1.0",
         "zendframework/zend-expressive-twigrenderer": "^1.0",
         "zendframework/zend-form": "^2.6",
@@ -29,7 +29,12 @@
         "zendframework/zend-session": "~2.5",
         "zendframework/zend-authentication": "^2.5",
         "zendframework/zend-inputfilter": "^2.6",
-        "zendframework/zend-hydrator": "^1.1 || ^2.1"
+        "zendframework/zend-hydrator": "^1.1 || ^2.1",
+        "avz-cmf/bigdata": "^4.0",
+        "zendframework/zend-http": "^2.5",
+        "avz-cmf/zaboy-res": "^1.1.8",
+        "zendframework/zend-db": "^2.7",
+        "avz-cmf/zaboy-rest": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
