Изменен сервис по работе с конфигами сторе. Теперь он может возвращать минимальный конфиг из любого сторе на основе данных в нутри него.

--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
             "victorynox\\Ebay\\": "src/Ebay/",
             "victorynox\\AnalyticReports\\": "src/AnalyticReports/",
             "victorynox\\View\\": "src/View/",
-            "victorynox\\Util\\": "src/Util/"
+            "victorynox\\Util\\": "src/Util/",
+            "victorynox\\Configurator\\": "src/Configurator/"
         }
     },
     "autoload-dev": {
