--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "zendframework/zend-expressive-twigrenderer": "^1.0",
         "zendframework/zend-form": "^2.6",
         "zendframework/zend-eventmanager": "~2.5",
-        "zendframework/zend-session": "~2.5",
+        "zendframework/zend-session": "^2.7",
         "zendframework/zend-authentication": "^2.5",
         "zendframework/zend-inputfilter": "^2.6",
         "zendframework/zend-hydrator": "^1.1 || ^2.1",
